--- a/client/client.vcxproj
+++ b/client/client.vcxproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
@@ -30,7 +30,7 @@
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <PlatformToolset>v142</PlatformToolset>
-    <CharacterSet>Unicode</CharacterSet>
+    <CharacterSet>MultiByte</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
@@ -140,7 +140,18 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\share\SocketSendRecvTools.c" />
+    <ClCompile Include="fileManager.c" />
+    <ClCompile Include="Lock.c" />
     <ClCompile Include="main.c" />
+    <ClCompile Include="threadManager.c" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="..\share\HardCodedData.h" />
+    <ClInclude Include="..\share\SocketSendRecvTools.h" />
+    <ClInclude Include="fileManager.h" />
+    <ClInclude Include="Lock.h" />
+    <ClInclude Include="threadManager.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
