--- a/server/server.vcxproj
+++ b/server/server.vcxproj
@@ -141,16 +141,14 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="..\share\SocketSendRecvTools.c" />
-    <ClCompile Include="fileManager.c" />
-    <ClCompile Include="Lock.c" />
+    <ClCompile Include="game.c" />
     <ClCompile Include="main.c" />
     <ClCompile Include="threadManager.c" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\share\HardCodedData.h" />
     <ClInclude Include="..\share\SocketSendRecvTools.h" />
-    <ClInclude Include="fileManager.h" />
-    <ClInclude Include="Lock.h" />
+    <ClInclude Include="game.h" />
     <ClInclude Include="threadManager.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
